# ViolinOptimalControl

./: .gitignore  LICENSE  README.md  VtkGrab.py
Misc/: find_initial_pose.py
ModelEditor/: ConvertOsim2Biorbd.py  Converter.py  Model_Editor.py  Modelizer.py  OpenSimReader.py  __init__.py
Old/fatigue/: Validation_fatigue_biorbd.py  fatigue.py  fatigue_non_ordonnate.py  utils_fatigue.py
Old/optimal_control_acado/: CMakeLists.txt  EocarNphases.cpp  forwardTest.py
Old/optimal_control_acado/Initialisation/: InitControlsRepeatedUpAndDownBow.txt  InitStatesRepeatedUpAndDownBow.txt
Old/optimal_control_acado/OLD/: Av1Phase.cpp  SansMuscle.cpp
Old/optimal_control_acado/includes/: constraints.h  violinStringConfig.h
Old/optimal_control_casadi/: CMakeLists.txt  UpAndDownBow.cpp  eocarOpti.cpp
Old/optimal_control_casadi/include/: AnimationCallback.h  biorbdCasadi_interface_common.h
Old/optimal_control_casadi/src/: AnimationCallback.cpp
PhdThesis/: environment.yml
PhdThesis/ExtraMaterials/: extra_figures.py
PhdThesis/ExtraMaterials/models/: WuViolin.bioMod  bow.bioMod  violon_one_string.bioMod
PhdThesis/FeasabilityStudyOCP/: main.py  studies.py
PhdThesis/FeasabilityStudyOCP/feasability_study_ocp/: __init__.py  enums.py  fatigue_model.py  ocp_configurations.py
PhdThesis/FeasabilityStudyOCP/models/: arm26.bioMod
PhdThesis/FeasibilityStudies/: main.py  studies.py
PhdThesis/FeasibilityStudies/feasibility_studies/: __init__.py  enums.py  fatigue_integrator.py  fatigue_model.py  fatigue_models.py  fatigue_parameters.py  study_configuration.py  target_function.py
PhdThesis/FeasibilityStudyOCP/: studies.py
PhdThesis/ViolinMovementSynthesis/: main.py  studies.py  violin_simulation_ocp.py
analyses/: Benchmark.py  ConvertOsim2Biorbd3.3.py  ConvertOsim2Biorbd4.0.py  animation.py  experimentation.py  fatigue.py  show_eocar.py  show_model.py  show_optim_control.py  show_optim_control_casadi.py  test.py  utils.py
analyses/old_theophile/: get_optimal_data.py  get_single_shoot.py  load_file_analyse.py  load_file_animate.py  load_file_graph.py  load_output_ipopt.py  xia_model_validation.py
fatigue/: Validation_fatigue_biorbd.py  fatigue.py  fatigue_non_ordonnate.py  utils_fatigue.py
models/: Bras.bioMod  BrasSimple.bioMod  BrasThelen.bioMod  BrasViolon.bioMod  BrasViolonNoMuscles.bioMod  Model.bioMod  ModelTest.bioMod  ModeleAv1Muscle.bioMod  ModeleAv2Muscles.bioMod  WuViolin.bioMod  conv-arm26.bioMod  eocar.bioMod  simple.bioMod  testloop.bioMod
models/Geometry/: humerus_left.vtp  radius_left.vtp  ulna_left.vtp
models/Opensim_model/: arm26.osim
optimal_control/: Av1Muscle.cpp  Av1Phase.cpp  Av2Muscles.cpp  Av2NPhases.cpp  Av2Phases.cpp  AvNPhases.cpp  CMakeCache.txt  CMakeLists.txt  EocarNphases.cpp  RepeatedUpAndDownBow.cpp  SansMuscle.cpp  Test.cpp  Violon.cpp  dumbOCP.cpp  eocar.cpp  eocarBiorbd.cpp  forwardTest.py  show_model.py  tata.cpp  test  test.py  test2.py  test3.py  utils.py
optimal_control/Initialisation/: InitControls.txt  InitControlsEocar.txt  InitStates.txt  T2Phases.txt  U1Muscle.txt  U2Muscles.txt  U2Phases.txt  X1Muscle.txt  X2Muscles.txt  X2Phases.txt
optimal_control/Modeles/: ModeleAv2Muscles.s2mMod  ModeleSansMuscle.bioMod
optimal_control/OLD/: Av1Muscle.cpp  Av2Muscles.cpp  Av2Phases.cpp  Violon.cpp
optimal_control/Results/: ControlsAv2Muscles.txt  ParametersAv2Muscles.txt  StatesAv2Muscles.txt
optimal_control/includes/: biorbd_declarer.h  biorbd_initializer.h  constraints.cpp  constraints.h  dynamics.cpp  dynamics.h  integrator.cpp  integrator.h  objectives.cpp  objectives.h  utils.cpp  utils.h
optimal_control/modules/: FindBiorbd.cmake
optimal_control_acado/: InitialSolution.m  RepeatedUpAndDownBow.cpp  eocar.cpp  eocarBiorbd.cpp  forwardTest.py
optimal_control_acado/Initialisation/: InitStatesEocar.txt
optimal_control_acado/OLD/: Av2NPhases.cpp  eocar.cpp
optimal_control_acado/includes/: constraints.cpp  objectives.cpp  objectives.h  utils.cpp
optimal_control_acados/: CMakeLists.txt  arm.cpp
optimal_control_acados/src/: utils.cpp
optimal_control_casadi/: CMakeLists.txt  UpAndDownBow.cpp  UpAndDownBowAllCasadi.cpp  arm.cpp  eocar.cpp  eocarAllCasadi.cpp  eocarBiorbd.cpp  eocarBiorbdKinConstraint.cpp  testeocar3.cpp
optimal_control_casadi/include/: AnimationCallback.h  angle_between_segment_and_markerSystem_casadi.h  angle_between_segment_and_markers_casadi.h  angle_between_segments_casadi.h  biorbdCasadi_interface_common.h  forward_dynamics_casadi.h  forward_kinematics_casadi.h  projectionOnSegment_casadi.h  segment_axes_casadi.h  utils.h
optimal_control_casadi/modules/: FindCasadi.cmake
optimal_control_casadi/src/: AnimationCallback.cpp  angle_between_segment_and_markerSystem_casadi.cpp  angle_between_segment_and_markers_casadi.cpp  angle_between_segments_casadi.cpp  forward_dynamics_casadi.cpp  forward_kinematics_casadi.cpp  projectionOnSegment_casadi.cpp  segment_axes_casadi.cpp  utils.cpp  utils.h
optimal_control_python/: analyze.py  eocarBiorbd.py  find_forces_and_moments.py  find_initial_pose.py  generate_bow_trajectory.py  generate_up_and_down_bow_target.py  get_optimal_data.py  load_file.py  load_file_analyse.py  load_file_animate.py  load_file_graph.py  load_output_ipopt.py  plot_fatigue_param.py  q_profile.py  read_doc_bo.py  run.sh  show_bow_trajectory.py  show_optim.py  test2.py  thesis_studies.py  up_and_down_5_constraints  up_and_down_IPOPT_NMPC_same_iter.py  up_and_down_NMPC.py  up_and_down_NMPC_IPOPT.py  up_and_down_NMPC_acados.py  up_and_down_bow.py  utils_functions.py  violin_simulation_nmpc.py  violin_simulation_ocp.py  xia_model_example.py  xia_model_validation.py
optimal_control_python/OLD/: xia_model_example.py
optimal_control_python/casadi_nlp/: objective_functions.py
optimal_control_python/thesis_studies_misc/: fatigue_integrator.py  fatigue_models.py  target_functions.py
optimal_control_python/utils/: __init__.py  find_forces_and_moments.py  xia.py
optimal_control_python/violin_ocp/: __init__.py  bow.py  ocp.py  violin.py  viz.py  xia.py
validation/: ReadMe
(+38 files in other folders)
